<resources>
    <string name="accept">Accept</string>
    <string name="ad_sent_from_discover">Ad sent via Discover</string>
    <string name="add">Add</string>
    <string name="add_by_snapcode">Add by Snapcode</string>
    <string name="add_by_snapcode_auto_tip">"Snapcodes let you easily add friends.
Just take a screenshot of a Snapcode,
and then open Snapchat!"</string>
    <string name="add_by_snapcode_manual_tip">"Snapcodes let you easily add friends.
Enable auto-add Snapcodes,
take a screenshot of a Snapcode,
and then open Snapchat!"</string>
    <string name="add_by_username">Add by Username</string>
    <string name="add_by_username_description">"My username is
"<g example="team_snapchat" id="username">%s</g></string>
    <string name="add_by_username_search_hint">Username</string>
    <string name="add_friend_group_title">ADD FRIEND</string>
    <string name="add_friend_question">Add %s?</string>
    <string name="add_friend_request_pending">Pending</string>
    <string name="add_friend_request_pending_with_username">Pending - <g id="username">%s</g></string>
    <string name="add_friends_contacts_permission_explanation_text">"Friends who have your phone number in their address book will be able to find you on Snapchat.

We won't spam or auto-add your friends.

Read our "<a href="http://www.snapchat.com/privacy">Privacy Policy</a> to learn more.</string>
    <string name="add_friends_contacts_permission_text">Snapchat uses the phone numbers in your address book to help you find your friends.</string>
    <string name="add_friends_could_not_add">Could not add as a friend. Please try again.</string>
    <string name="add_friends_could_not_find_contacts">Snapchat could not find any contacts.</string>
    <string name="add_friends_could_not_find_friends">Could not find new friends</string>
    <string name="add_friends_could_not_remove">Could not remove as a friend. Please try again.</string>
    <string name="add_friends_displayname_desc">My name is</string>
    <string name="add_friends_displayname_following_desc">is how you will appear to Snapchatters you add.</string>
    <string name="add_friends_empty_address_book">Your address book is empty!</string>
    <string name="add_friends_finding_friends_text">Finding friends…</string>
    <string name="add_friends_from_screenshot_tips">"Tap a photo with a Snapcode to add
that Snapchatter!"</string>
    <string name="add_friends_from_screenshot_title">Photos</string>
    <string name="add_friends_invite_contacts">Invite to Snapchat</string>
    <string name="add_friends_no_friend_requests">No new friends</string>
    <string name="add_friends_on_snapchat">Snapchatters in My Address Book</string>
    <string name="add_friends_pending_snap">1 pending Snap</string>
    <string name="add_friends_pending_snaps">%d pending Snaps</string>
    <string name="add_friends_shared_story">%s is a collection of Snaps from users at the event. It appears in your Stories until the end of the event. Happy Snapping!</string>
    <string name="add_friends_title">Add Friends</string>
    <string name="add_friends_username_desc">My username is</string>
    <string name="add_friends_username_following_desc">is your username.</string>
    <string name="add_friends_who_added_me">ADDED ME</string>
    <string name="add_from_address_book">Add from Address Book</string>
    <string name="add_from_camera_roll">Add from Photos</string>
    <string name="add_nearby">Add Nearby</string>
    <string name="add_nearby_friends_title">Add Nearby</string>
    <string name="add_nearby_prompt">Add Nearby uses your location to find and add nearby Snapchatters. Your name will be visible to other Snapchatters.</string>
    <string name="add_to_your_story">Add To Your Story?</string>
    <string name="add_to_your_story_explanation">Adding a Snap to your Story allows others to view your Snap an unlimited number of times for 24 hours. Would you like to add this Snap to your Story?</string>
    <string name="added">Added!</string>
    <string name="added_expiration_message">%s is a collection of Snaps from users at the event. It appears in your Stories until the end of the event. Happy Snapping!</string>
    <string name="added_friend">Added you</string>
    <string name="added_me_button">Added Me</string>
    <string name="added_me_title">Added Me</string>
    <string name="added_you">Added you!</string>
    <string name="added_you_by_phone_number">Added you by phone #</string>
    <string name="added_you_by_qr_code">Added you by Snap</string>
    <string name="added_you_by_username">Added you by username</string>
    <string name="address_book_title">Address Book</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="already_friends">"You're already friends! "<g id="emoji">%s</g></string>
    <string name="an_error_occurred">An error occurred.</string>
    <string name="app_name">Snapchat</string>
    <string name="are_you_sure_you_want_to_abandon">Are you sure you want to abandon your Snapsterpiece?</string>
    <string name="ask_a_nearby_friend">To add a friend, ask them to open Add Nearby.</string>
    <string name="audio_header">Record audio</string>
    <string name="audio_setting_header">Change your audio settings</string>
    <string name="audio_setting_text">On some devices, Snapchat adjusts audio settings to let you video chat.</string>
    <string name="audio_text">Use your microphone to record audio for Snaps and video chat.</string>
    <string name="auto_add_snapcodes">Auto-add Snapcodes</string>
    <string name="auto_add_snapcodes_detail">"Snapchat will automatically add Snapcodes
from your device's photos."</string>
    <string name="best_friends_score">Score: %s</string>
    <string name="bestfriend_group_title">BEST FRIENDS</string>
    <string name="beta_splash_message">"Thank you for installing Snapchat Beta! As a beta tester, you'll be able to enjoy our newest features while helping us to work out the kinks.

Thank you for making Snapchat awesome!"</string>
    <string name="block_and_report_title">Let us know your reason for blocking them?</string>
    <string name="block_confirm_message">You will be removed from their friends and they will not be able to re-add you from this account unless you unblock them.</string>
    <string name="block_friend_button">Block</string>
    <string name="block_friend_title">Are you sure you want to block %s?</string>
    <string name="block_friend_title_with_display_name">Are you sure you want to block %1$s - %2$s</string>
    <string name="block_reason_annoying">Annoying</string>
    <string name="block_reason_dont_know_whom">"I don't know who they are"</string>
    <string name="block_reason_harassing_me">Harassing Me</string>
    <string name="block_reason_inappropriate_content">Inappropriate Content</string>
    <string name="block_reason_other">Other</string>
    <string name="blocked_group_title">BLOCKED</string>
    <string name="blocked_title">Blocked</string>
    <string name="blocking_secondary_text">%s - Blocking…</string>
    <string name="camera_insert_sd_card">Insert an SD card to record video</string>
    <string name="camera_insert_sd_card_to_watch">Cannot play video without an SD card</string>
    <string name="camera_onboarding_message">"&lt;font color='#FF9900'>Tap&lt;/font>&lt;font color='#FFFFFF'> to take a photo. &lt;/font>&lt;font color='#FF9900'>Hold&lt;/font> &lt;font color='#FFFFFF'> to take a video.&lt;/font>"</string>
    <string name="camera_orientation_rotate_180">Rotate 180°</string>
    <string name="camera_orientation_standard">Standard</string>
    <string name="camera_sd_card_being_checked">Checking SD card. Please try again in a moment.</string>
    <string name="camera_sd_card_issue">There is a problem with your SD card</string>
    <string name="camera_sd_card_mounted_to_computer">Cannot record when SD card is connected to a computer. Disconnect your USB cable.</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_add_recipients">Cannot add more Snapchatters!</string>
    <string name="cannot_unlink_card">Could not unlink card. Please try again.</string>
    <string name="captcha_failed_to_load">There was an error loading the images. Please ensure you have a good internet connection and try again.</string>
    <string name="captcha_loading_images">Loading images…</string>
    <string name="captcha_not_quite_right">"You didn't identify all of the images. Please try again."</string>
    <string name="caption_dialog_title">Closed Captions</string>
    <string name="caption_onboarding_message">Tap to add a caption!</string>
    <string name="card_back_cvv_instructions">Enter CVV</string>
    <string name="card_back_zip_instructions">Enter Billing Zip Code</string>
    <string name="card_blocked">Card blocked due to unusual activity.</string>
    <string name="card_cvv">CVV</string>
    <string name="card_debit_card">Debit Card</string>
    <string name="card_declined">Card declined.</string>
    <string name="card_expiration">MM/YY</string>
    <string name="card_front_instructions">"Scan or enter
your debit card."</string>
    <string name="card_link_disclaimer">By continuing, you are giving this information to both Snapchat and Square pursuant to their respective privacy policies.</string>
    <string name="card_linked_too_many_accounts">Card linked with too many accounts.</string>
    <string name="card_number">Card Number</string>
    <string name="card_unsupported">Card unsupported.</string>
    <string name="card_unsupported_details">"Please use a debit card issued
by a bank in the United States."</string>
    <string name="card_zip">5-Digit ZIP</string>
    <string name="cash_ineligible_details">You are not eligible to use Snapcash at this time.</string>
    <string name="cash_phone_verification_desc">Please verify a US phone number before using Snapcash.</string>
    <string name="cash_phone_verification_title">Verify Phone #</string>
    <string name="cash_square_tos_agree">I AGREE</string>
    <string name="closed_captioning_unavailable">Closed Captions are not available for this video</string>
    <string name="delete_snapkidz">Delete Snapkidz account</string>
    <string name="depressed">Depressed</string>
    <string name="done">Done</string>
    <string name="drop_shadow">Drop Shadow</string>
    <string name="first_auto_add_message">Tap to learn more</string>
    <string name="first_auto_add_title">Add Snapcodes from your photos?</string>
    <string name="first_auto_yes_button_title">Yes!</string>
    <string name="learn_more">Learn More</string>
    <string name="login_new_username_hint"><i>Email Address</i></string>
    <string name="no_edge">No Edge</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="raised">Raised</string>
    <string name="registration_continue">CONTINUE</string>
    <string name="settings_account_actions_header">ACCOUNT ACTIONS</string>
    <string name="settings_account_actions_logout">Log Out</string>
    <string name="settings_boring_header">MORE INFORMATION</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms">Terms of Use</string>
    <string name="signup_birthday_hint"><i>Birthday</i></string>
    <string name="signup_page_password_hint">New Password</string>
    <string name="signup_page_title">Sign Up</string>
    <string name="uniform">Uniform Edges</string>
    <string name="user_agreement">By creating an account, you agree to the <a href="http://www.snapchat.com/terms">Terms of Use</a> and you acknowledge that you have read the <a href="http://www.snapchat.com/privacy">Privacy Policy</a>". "</string>
    <string name="version_in_settings">Snapchat v<g example="9.2.0.3" id="version">%s</g>"
Made in Los Angeles"</string>
    <string name="what_is_snapkidz">What is Snapkidz?</string>
</resources>