<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/settings_activity_layout" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_panel" style="@style/TopPanel">
        <RelativeLayout android:id="@id/settings_back_button_area" android:background="@drawable/action_bar_touch_selector" android:paddingRight="@dimen/default_gap" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:id="@id/up_arrow" android:background="@drawable/aa_action_bar_up_arrow_green" android:layout_width="9.0dip" android:layout_height="26.0dip" android:layout_marginLeft="@dimen/default_gap" android:layout_centerVertical="true" />
            <ImageView android:background="@drawable/aa_snapkidz_logo" android:layout_width="115.0dip" android:layout_height="30.5dip" android:layout_toRightOf="@id/up_arrow" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
    <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/top_panel" />
    <ScrollView android:id="@id/general_settings_scrollview" android:visibility="visible" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/default_gap_2x" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/default_gap" android:layout_below="@id/top_panel">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/default_gap">
            <TextView android:id="@id/boring_header" android:text="@string/settings_boring_header" style="@style/settings_section_header" />
            <include layout="@layout/settings_header_separator" />
            <RelativeLayout android:id="@id/what_is_snapkidz" style="@style/settings_item_name_only">
                <TextView android:text="@string/what_is_snapkidz" android:layout_centerVertical="true" style="@style/settings_item_name" />
            </RelativeLayout>
            <include layout="@layout/list_separator" />
            <RelativeLayout android:id="@id/privacy_policy" style="@style/settings_item_name_only">
                <TextView android:text="@string/settings_privacy_policy" android:layout_centerVertical="true" style="@style/settings_item_name" />
            </RelativeLayout>
            <include layout="@layout/list_separator" />
            <RelativeLayout android:id="@id/terms" style="@style/settings_item_name_only">
                <TextView android:text="@string/settings_terms" android:layout_centerVertical="true" style="@style/settings_item_name" />
            </RelativeLayout>
            <TextView android:text="@string/settings_account_actions_header" style="@style/settings_section_header" />
            <include layout="@layout/settings_header_separator" />
            <RelativeLayout android:id="@id/account_actions_logout" style="@style/settings_item_name_only">
                <TextView android:text="@string/settings_account_actions_logout" android:layout_centerVertical="true" style="@style/settings_item_name" />
            </RelativeLayout>
            <include layout="@layout/list_separator" />
            <RelativeLayout android:id="@id/account_actions_delete_snapkidz" style="@style/settings_item_name_only">
                <TextView android:text="@string/delete_snapkidz" android:layout_centerVertical="true" style="@style/settings_item_name" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/version_in_settings" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>