<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:orientation="vertical" android:id="@id/closed_captioning_options_edge_type_selector" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioButton android:gravity="center_vertical" android:id="@id/closed_captioning_options_edge_selection_no_edge_attribute" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/no_edge" android:drawableLeft="@drawable/closed_captioning_options_edge_selection_no_edge_attribute" android:drawablePadding="12.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/closed_captioning_options_edge_selection_depressed_edges" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/depressed" android:drawableLeft="@drawable/closed_captioning_options_edge_selection_depressed_edges" android:drawablePadding="12.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/closed_captioning_options_edge_selection_raised_edges" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/raised" android:drawableLeft="@drawable/closed_captioning_options_edge_selection_raised_edges" android:drawablePadding="12.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/closed_captioning_options_edge_selection_uniform_edges" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/uniform" android:drawableLeft="@drawable/closed_captioning_options_edge_selection_uniform_edges" android:drawablePadding="12.0dip" />
    <RadioButton android:gravity="center_vertical" android:id="@id/closed_captioning_options_edge_selection_drop_shadow_edges" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/drop_shadow" android:drawableLeft="@drawable/closed_captioning_options_edge_selection_drop_shadow_edges" android:drawablePadding="12.0dip" />
</RadioGroup>