<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/default_gap_5x" android:layout_marginRight="@dimen/default_gap_5x" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/registration_title_size" android:textColor="@color/purple" android:gravity="center_horizontal" android:id="@id/signup_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_gap_5x" android:layout_marginBottom="@dimen/default_gap_3x" android:text="@string/signup_page_title" android:layout_alignParentTop="true" />
            <EditText android:id="@id/signup_email_field" android:background="@drawable/aa_holo_edit_text_black_selector" android:layout_width="fill_parent" android:layout_height="@dimen/ui_element_unit" android:layout_marginTop="@dimen/default_gap" android:hint="@string/login_new_username_hint" android:maxLength="60" android:layout_below="@id/signup_title" android:inputType="textEmailAddress" style="@android:style/Widget.Holo.EditText" />
            <ImageView android:id="@id/signup_email_error_red_x" android:layout_alignRight="@id/signup_email_field" android:layout_alignBottom="@id/signup_email_field" style="@style/ErrorRedX" />
            <TextView android:textSize="@dimen/registration_textview_error_message_text_size" android:textColor="@color/red_text" android:id="@id/signup_email_error_message" android:paddingLeft="@dimen/default_gap" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:minLines="1" android:layout_below="@id/signup_email_field" android:layout_alignLeft="@id/signup_email_field" />
            <EditText android:id="@id/signup_password_field" android:background="@drawable/aa_holo_edit_text_black_selector" android:layout_width="fill_parent" android:layout_height="@dimen/ui_element_unit" android:layout_marginTop="-4.0dip" android:hint="@string/signup_page_password_hint" android:layout_below="@id/signup_email_error_message" android:inputType="textPassword" style="@android:style/Widget.Holo.EditText" />
            <ImageView android:id="@id/signup_password_error_red_x" android:layout_alignRight="@id/signup_password_field" android:layout_alignBottom="@id/signup_password_field" style="@style/ErrorRedX" />
            <TextView android:textSize="@dimen/registration_textview_error_message_text_size" android:textColor="@color/red_text" android:id="@id/signup_password_error_message" android:paddingLeft="@dimen/default_gap" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:minLines="1" android:layout_below="@id/signup_password_field" android:layout_alignLeft="@id/signup_password_field" />
            <EditText android:id="@id/signup_birthday_field" android:background="@drawable/aa_holo_edit_text_black_selector" android:layout_width="fill_parent" android:layout_height="@dimen/ui_element_unit" android:layout_marginTop="-4.0dip" android:hint="@string/signup_birthday_hint" android:layout_below="@id/signup_password_error_message" style="@android:style/Widget.Holo.EditText" />
            <ImageView android:layout_width="@dimen/icon_size_smaller" android:layout_height="@dimen/icon_size_smaller" android:layout_marginRight="@dimen/default_gap" android:layout_marginBottom="@dimen/default_gap" android:src="@drawable/birthday_icon" android:layout_alignRight="@id/signup_birthday_field" android:layout_alignBottom="@id/signup_birthday_field" />
            <TextView android:textSize="@dimen/registration_textview_error_message_text_size" android:textColor="@color/red_text" android:id="@id/signup_birthday_error_message" android:paddingLeft="@dimen/default_gap" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:minLines="1" android:layout_below="@id/signup_birthday_field" android:layout_alignLeft="@id/signup_birthday_field" />
            <com.snapchat.android.ui.LinkFriendlyTextView android:paddingLeft="@dimen/default_gap" android:paddingTop="@dimen/default_gap_2x" android:paddingRight="@dimen/default_gap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_agreement" android:layout_below="@id/signup_birthday_error_message" style="@style/RegistrationFinePrint" />
        </RelativeLayout>
    </ScrollView>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@id/signup_button" android:visibility="gone" android:text="@string/registration_continue" style="@style/RegistrationContinueButton" />
        <ProgressBar android:layout_gravity="center" android:id="@id/signup_progressbar" android:visibility="gone" android:layout_width="@dimen/ui_element_unit" android:layout_height="@dimen/ui_element_unit" />
    </FrameLayout>
</LinearLayout>