<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_panel" style="@style/TopPanel">
        <RelativeLayout android:id="@id/back_button_area" android:background="@drawable/action_bar_touch_selector" android:paddingRight="@dimen/default_gap_half" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:id="@id/up_arrow" android:background="@drawable/aa_action_bar_up_arrow_purple" android:layout_width="9.0dip" android:layout_height="26.0dip" android:layout_marginLeft="@dimen/default_gap" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/text_size_default" android:textStyle="normal" android:textColor="@color/purple" android:id="@id/top_panel_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_gap" android:text="@string/add_by_snapcode" android:layout_toRightOf="@id/up_arrow" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
    <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="normal" android:gravity="center_horizontal" android:id="@id/add_by_snapcode_tip_text" android:padding="@dimen/default_gap_2x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_by_snapcode_auto_tip" />
                <FrameLayout android:id="@id/video_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/add_by_snapcode_tip_text">
                    <com.snapchat.android.ui.TextureVideoView android:layout_gravity="center" android:id="@id/add_from_camera_roll_help_video" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </FrameLayout>
            </RelativeLayout>
            <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <RelativeLayout android:gravity="center_vertical" android:id="@id/auto_add_by_camera_roll" android:background="@drawable/menu_item_selector" android:paddingLeft="@dimen/default_gap" android:paddingTop="@dimen/default_gap" android:paddingRight="@dimen/default_gap_2x" android:paddingBottom="@dimen/default_gap" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/label_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="36.0dip">
                    <TextView android:gravity="center|left" android:paddingLeft="@dimen/default_gap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_add_snapcodes" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
                    <TextView android:gravity="center|left" android:paddingLeft="@dimen/default_gap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_add_snapcodes_detail" android:layout_weight="1.0" style="@android:style/TextAppearance.Small" />
                </LinearLayout>
                <CheckBox android:id="@id/autoscan_checkbox" android:layout_alignParentRight="true" style="@style/settings_checkbox" />
            </RelativeLayout>
            <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/add_from_camera_roll" android:background="@drawable/menu_item_selector" android:paddingLeft="@dimen/default_gap" android:paddingTop="@dimen/default_gap_2x" android:paddingBottom="@dimen/default_gap_2x" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:gravity="center|left" android:paddingLeft="@dimen/default_gap" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_from_camera_roll" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
                <ImageView android:layout_width="@dimen/icon_size_extra_smaller" android:layout_height="@dimen/icon_size_extra_smaller" android:layout_marginRight="@dimen/default_gap_2x" android:src="@drawable/sc_addfriends_chevron_icon" android:scaleType="centerInside" />
            </LinearLayout>
            <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="@color/link_blue" android:gravity="center" android:id="@id/learn_more" android:paddingTop="@dimen/default_gap_2x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/learn_more" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>